--- a/demo/src/templates/pages/index.hbs
+++ b/demo/src/templates/pages/index.hbs
@@ -16,9 +16,7 @@
     <![endif]-->
 
     <!--[if lte IE 8]>
-        <script src="https://unpkg.com/html5shiv/dist/html5shiv.min.js"></script>
-        <script src="https://unpkg.com/respond.js/dest/respond.min.js"></script>
-        <script src="https://unpkg.com/selectivizr2"></script>
+    <script src="https://unpkg.com/html5shiv/dist/html5shiv.min.js"></script>
     <![endif]-->
 </head>
 
@@ -63,6 +61,10 @@
     </main>
 
     <!-- JavaScript -->
+    <!--[if lte IE 8]>
+    <script src="https://unpkg.com/nwmatcher"></script>
+    <script src="https://unpkg.com/selectivizr2"></script>
+    <![endif]-->
     <script src="js/main.js"></script>
 </body>
 </html>
