Change default view to “Compare”

--- a/demo/src/templates/pages/index.hbs
+++ b/demo/src/templates/pages/index.hbs
@@ -20,7 +20,7 @@
     <![endif]-->
 </head>
 
-<body class="less">
+<body class="compare">
 
     <!--[if gte IE 9]>  <!-- -->
     <input type="checkbox" id="nav-toggle" autocomplete="off">
@@ -30,11 +30,11 @@
     <nav>
         <h1>Nth-Grid - Test</h1>
         <ul>
+            <li><a href="#compare">Compare</a></li>
             <li><a href="#less">Less</a></li>
             <li><a href="#postcss">PostCSS</a></li>
             <li><a href="#sass">Sass</a></li>
             <li><a href="#stylus">Stylus</a></li>
-            <li><a href="#compare">Compare</a></li>
             <li><a href="sassdoc/">SassDoc</a></li>
         </ul>
     </nav>
