Update titles. Remove SassDoc link. Fix js url.

--- a/demo/src/templates/pages/index-less.hbs
+++ b/demo/src/templates/pages/index-less.hbs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nth-Grid - Less.js Test</title>
+    <title>Nth-Grid (Less.js)</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet/less" href="grids-less.less">
 
@@ -17,7 +17,10 @@
 
 <body class="less">
     <nav>
-        <h1>Nth-Grid - Less.js Test</h1>
+        <h1>Nth-Grid</h1>
+        <ul>
+            <li>Less.js (client-side)</li>
+        </ul>
     </nav>
 
     <main>
