--- a/demo/src/templates/pages/index.hbs
+++ b/demo/src/templates/pages/index.hbs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nth-Grid - Test</title>
+    <title>Nth-Grid Demo</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="grids-less.css">
 
@@ -28,14 +28,13 @@
         <i><span></span></i>
     </label>
     <nav>
-        <h1>Nth-Grid - Test</h1>
+        <h1>Nth-Grid</h1>
         <ul>
             <li><a href="#compare">Compare</a></li>
             <li><a href="#less">Less</a></li>
             <li><a href="#postcss">PostCSS</a></li>
             <li><a href="#sass">Sass</a></li>
             <li><a href="#stylus">Stylus</a></li>
-            <li><a href="sassdoc/">SassDoc</a></li>
         </ul>
     </nav>
     <![endif]-->
@@ -65,6 +64,6 @@
     <script src="https://unpkg.com/nwmatcher"></script>
     <script src="https://unpkg.com/selectivizr2"></script>
     <![endif]-->
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 </html>
