Rename scripts and class names

--- a/demo/grids-pcss.pcss
+++ b/demo/grids-pcss.pcss
@@ -10,7 +10,7 @@
     --nth-grid-remove-globals: true;
 }
 
-.postcss {
+.pcss {
     .grid-nocalc-singleratio {
         nth-grid {
             width: 95%;
