--- a/demo/grids-styl.styl
+++ b/demo/grids-styl.styl
@@ -10,7 +10,7 @@ $nth-grid-debug = false;
 $nth-grid-warnings = false;
 $nth-grid-remove-globals = true;
 
-.stylus
+.styl
     .grid-nocalc-singleratio
         nth-grid(
             $width: 95%,
