--- a/src/demo/sass/main.scss
+++ b/src/demo/sass/main.scss
@@ -13,10 +13,10 @@ $text-color: #000;
 // Vendor
 $vendor-color-map: (
     compare: #333,
-    less   : #466DA9,
-    postcss: #dd3735,
-    sass   : #c6538c,
-    stylus : #ff6347
+    less: #466DA9,
+    pcss: #dd3735,
+    scss: #c6538c,
+    styl: #ff6347
 );
 
 // Layout
